--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.0",
+    "http-errors": "^1.7.2",
     "mongoose": "^5.5.11",
     "stripe": "^7.1.0"
   }
